menambahkan Hero Picture

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
     </header>
 
     <div class="container mx-auto">
-        <div class="flex gap-7 px-40 ">
-            <div class="flex flex-wrap gap-4 w-3/5 mr-2 justify-between">
+        <div class="flex gap-7 px-40 pb-32">
+            <div class="flex flex-wrap gap-4 w-3/5 mr-2 justify-between bg">
                 <div class="py-64 pr-40 ">
                     <h1 class="font-extrabold text-4xl">Hi, Saya Seruan Ndi Jonatan Giawa</h1>
                     <h1 class="font-bold text-md">Frontend Developer</h1>
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class=" w-2/5 ml-2 grid">
-                <div class="place-self-center bg-slate-300">
-                    <img src="/objek/images/hero1.jpg" alt="Profile.jpg">
+                <div class="place-self-center">
+                    <img class=" rounded-full hover:border-green-300 shadow-xl hover:shadow-green-300" src="/objek/images/hero4.png" alt="Profile picture.jpg">
                 </div> 
             </div>       
         </div>
