--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-        <div class="flex justify-center w-full text-sm items-center px-10 py-2">
+        <div class="flex justify-center w-full text-sm items-center px-10 py-10">
             <div class="flex flex-wrap px-10">
             <a href=""><h1 class="font-extrabold text-3xl"><a class="text-green-300">N</a>atan.</h1></a>
             </div>
     
             <div class="flex justify-center h-10 w-full">
                 <nav class="flex font-semibold">
-                    <a href="" class="block px-3 py-2 bg-white hover:bg-green-300 rounded-full transition duration-300 hover:duration-500">Home</a>
-                    <a href="#" class="block px-3 py-2 bg-white hover:bg-green-300 rounded-full transition duration-300 hover:duration-500">About Me</a>
-                    <a href="#" class="block px-3 py-2 bg-white hover:bg-green-300 rounded-full transition duration-300 hover:duration-500">Project</a>
-                    <a href="#" class="block px-3 py-2 bg-white hover:bg-green-300 rounded-full transition duration-300 hover:duration-500">Kontak</a>
+                    <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Home</a>
+                    <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">About Me</a>
+                    <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Project</a>
+                    <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Kontak</a>
                 </nav>
             </div>
     
@@ -37,9 +37,9 @@
                     <h1 class="font-bold text-md">Frontend Developer</h1>
                     <h1 class="text-sm">Tatakan Digital yang Dibangun dengan Ketrampilan: Menghadirkan Solusi Frontend yang Efisien dan Elegan untuk Membentuk Pengalaman Pengguna yang Luar Biasa. </h1>
                     <div>
-                        <button class="text-sm font-semibold border-4 border-green-300 hover:border-transparent bg-transparent
-                                     hover:bg-green-300 rounded-full mt-2 p-2 transition ease-in-out delay-150 hover:scale-110 
-                                     duration-300">Kontak Saya</button>
+                    <a href="https://wa.me/qr/RIMBPSKDY56SM1"><button class="text-sm font-semibold border-4 border-green-300 hover:border-transparent bg-transparent
+                        hover:bg-green-300 rounded-full mt-2 p-2 transition ease-in-out delay-150 hover:scale-110 
+                        duration-300">Kontak Saya</button></a>
                     </div>
                 </div>
             </div>
@@ -50,12 +50,49 @@
             </div>       
         </div>
 
-        <!-- BAGIAN TENTANG DIRI -->
-        <section class="about">
-            <div class="flex px-40 bg-blue-500">
+        <!-- BAGIAN PROJECT -->
+        <section class="project" id="project">
+            <div class="flex flex-wrap px-40">
+                <div class="font-bold text-xl mx-auto mt-5 justify-items-center"><h1>Project Saya</h1>
+                </div>
                 <div class="flex flex-wrap justify-between">
-                    <div class="bg-green-300 py-20 mx-auto">
-                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo hic, doloribus et nisi incidunt obcaecati accusamus repudiandae sequi dolorum esse molestiae unde itaque nobis adipisci fuga natus corrupti, qui enim consectetur nulla vel dolore, eos quisquam? Reprehenderit praesentium quis beatae qui quos. Reiciendis vel facilis ad dicta quaerat dolor voluptas necessitatibus, commodi ratione alias autem doloribus iusto officiis magni ab quasi, esse voluptatibus sunt sequi cupiditate tempore provident aspernatur veniam ipsa. Voluptate tenetur perspiciatis omnis! Corporis est corrupti aspernatur iste quaerat voluptatum minus quas eius, esse ipsa nam modi recusandae consequuntur, eligendi, atque eum sequi! Molestias cum veniam excepturi neque?</div>
+                    <div class=" py-20 mx-auto grid gap-x-7 gap-y-7 grid-cols-3">
+                        <div class= "border-2 hover:border-green-300 grid justify-items-center px-8 py-3 rounded-md shadow-md cursor-pointer transition ease-in-out delay-100 hover:scale-110 
+                        duration-700">
+                            <img src="/objek/images/tugas.png" class="h-44" alt="">
+                            <h2 class="font-bold text-sm">Judul Project</h2>
+                            <h5 class="text-xs text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, expedita?</h5>
+                        </div>
+                        <div class= "border-2 hover:border-green-300 grid justify-items-center px-8 py-3 rounded-md shadow-md cursor-pointer transition ease-in-out delay-100 hover:scale-110 
+                        duration-700">
+                            <img src="/objek/images/tugas.png" class="h-44" alt="">
+                            <h2 class="font-bold text-sm">Judul Project</h2>
+                            <h5 class="text-xs text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, expedita?</h5>
+                        </div>
+                        <div class= "border-2 hover:border-green-300 grid justify-items-center px-8 py-3 rounded-md shadow-md cursor-pointer transition ease-in-out delay-100 hover:scale-110 
+                        duration-700">
+                            <img src="/objek/images/tugas.png" class="h-44" alt="">
+                            <h2 class="font-bold text-sm">Judul Project</h2>
+                            <h5 class="text-xs text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, expedita?</h5>
+                        </div>
+                        <div class= "border-2 hover:border-green-300 grid justify-items-center px-8 py-3 rounded-md shadow-md cursor-pointer transition ease-in-out delay-100 hover:scale-110 
+                        duration-700">
+                            <img src="/objek/images/tugas.png" class="h-44" alt="">
+                            <h2 class="font-bold text-sm">Judul Project</h2>
+                            <h5 class="text-xs text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, expedita?</h5>
+                        </div>
+                        <div class= "border-2 hover:border-green-300 grid justify-items-center px-8 py-3 rounded-md shadow-md cursor-pointer transition ease-in-out delay-100 hover:scale-110 
+                        duration-700">
+                            <img src="/objek/images/tugas.png" class="h-44" alt="">
+                            <h2 class="font-bold text-sm">Judul Project</h2>
+                            <h5 class="text-xs text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, expedita?</h5>
+                        </div>
+                        <div class= "border-2 hover:border-green-300 grid justify-items-center px-8 py-3 rounded-md shadow-md cursor-pointer transition ease-in-out delay-100 hover:scale-110 
+                        duration-700">
+                            <img src="/objek/images/tugas.png" class="h-44" alt="">
+                            <h2 class="font-bold text-sm">Judul Project</h2>
+                            <h5 class="text-xs text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, expedita?</h5>
+                        </div>
                     </div>
                 </div>
             </div>
