--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 <nav class="flex font-semibold">
                     <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Home</a>
                     <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">About Me</a>
-                    <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Project</a>
+                    <a href="#project" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Project</a>
                     <a href="#" class="block px-3 py-2 font-medium hover:font-extrabold text-black hover:text-green-300 rounded-full transition duration-300 hover:duration-500">Kontak</a>
                 </nav>
             </div>
